--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,13 +1,20 @@
 buildscript {
+    dependencies {
+        classpath files('gradle/gradle-trust-all.jar')
+    }
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
         mavenCentral()
     }
 
+
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // Add the dependency for the Google services Gradle plugin
+        classpath 'com.google.gms:google-services:4.3.13'
+
     }
 }
 
@@ -15,6 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        
     }
 }
 
